Bugfix: fixed AI ship coordinate validation error where I'd incremented the regexes the wrong way; fixed CSS so squares are uniform size and ship colour contrasts to hit colour

--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100;200;300;400;500;600;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-
 /* GLOBALS */
 
 * {
@@ -75,7 +74,7 @@ main {
     margin: 0 auto;
 }
 
-/* FORM */
+/* FORMS */
 
 .form-container {
     width: 80%;
@@ -158,7 +157,6 @@ input[type="radio"] {
     
 }
 
-
 input[type="submit"] {
     margin-left: 20px;
     background-color: #7CB342;
@@ -224,7 +222,6 @@ input[type="submit"]:hover, input[type="submit"]:active {
     
 }
 
-
 .invisible {
     display: none !important;
 }
@@ -247,15 +244,13 @@ input[type="submit"]:hover, input[type="submit"]:active {
 }
 
 
-
-
 /* CELLS */
 
 .cell {
     border: 1px black solid;
     box-sizing: border-box;
-    height: 100%;
-    width: 100%;
+    height: 50px;
+    width: 50px;
     display: grid;
     align-items: center;
     font-size: 0.9rem;
@@ -267,7 +262,7 @@ input[type="submit"]:hover, input[type="submit"]:active {
 }
 
 .cell-ship {
-    background-color: #FF5733;
+    background-color: #ffda33;
 }
 
 .cell-ship::before {
